more missing vars

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -16,6 +16,7 @@ jobs:
           CARTESI_CONTRACTS_HISTORY_ADDRESS: ${{ secrets.CARTESI_CONTRACTS_HISTORY_ADDRESS }}
           CARTESI_CONTRACTS_INPUT_BOX_ADDRESS: ${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_ADDRESS }}
           CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER: ${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }}
+          CARTESI_APPLICATION_DEPLOYMENT_BLOCK_NUMBER: ${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }}
           CARTESI_EPOCH_DURATION: ${{ secrets.CARTESI_EPOCH_DURATION }}
           CARTESI_EPOCH_LENGTH: ${{ secrets.CARTESI_EPOCH_LENGTH }}
           CARTESI_AUTH_MNEMONIC: ${{ secrets.CARTESI_AUTH_MNEMONIC }}
@@ -163,10 +164,12 @@ jobs:
                   --env CARTESI_BLOCKCHAIN_HTTP_ENDPOINT=${{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }} \
                   --env CARTESI_BLOCKCHAIN_WS_ENDPOINT=${{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }} \
                   --env CARTESI_CONTRACTS_APPLICATION_ADDRESS=${{ secrets.CARTESI_CONTRACTS_APPLICATION_ADDRESS }} \
+                  --env CARTESI_APPLICATION_DEPLOYMENT_BLOCK_NUMBER=${{ secrets.CARTESI_APPLICATION_DEPLOYMENT_BLOCK_NUMBER }} \
                   --env CARTESI_CONTRACTS_AUTHORITY_ADDRESS=${{ secrets.CARTESI_CONTRACTS_AUTHORITY_ADDRESS }} \
                   --env CARTESI_CONTRACTS_HISTORY_ADDRESS=${{ secrets.CARTESI_CONTRACTS_HISTORY_ADDRESS }} \
                   --env CARTESI_CONTRACTS_INPUT_BOX_ADDRESS=${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_ADDRESS }} \
                   --env CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER=${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }} \
+                  --env CARTESI_AUTH_MNEMONIC='${{ secrets.CARTESI_AUTH_MNEMONIC }}' \
                   ultimateurinater/bubblewars-sepolia:latest"
             # - name: Wait for Blockchain Setup
             #   run: sleep 30 # Adjust the sleep duration as needed
