account index add

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -19,7 +19,8 @@ jobs:
           CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER: ${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }}
           CARTESI_EPOCH_DURATION: ${{ secrets.CARTESI_EPOCH_DURATION }}
           CARTESI_EPOCH_LENGTH: ${{ secrets.CARTESI_EPOCH_LENGTH }}
-          CARTESI_AUTH_PRIVATE_KEY: ${{ secrets.CARTESI_AUTH_PRIVATE_KEY }}
+          CARTESI_AUTH_MNEMONIC: ${{ secrets.CARTESI_AUTH_MNEMONIC }}
+          CARTESI_AUTH_MNEMONIC_ACCOUNT_INDEX: ${{ secrets.CARTESI_AUTH_MNEMONIC_ACCOUNT_INDEX }}
           CARTESI_BLOCKCHAIN_HTTP_ENDPOINT: ${{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}
           CARTESI_BLOCKCHAIN_WS_ENDPOINT: ${{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}
           CARTESI_POSTGRES_ENDPOINT: ${{ secrets.CARTESI_POSTGRES_ENDPOINT }}
@@ -47,7 +48,8 @@ jobs:
                   CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER
                   CARTESI_EPOCH_DURATION
                   CARTESI_EPOCH_LENGTH
-                  CARTESI_AUTH_PRIVATE_KEY
+                  CARTESI_AUTH_MNEMONIC
+                  CARTESI_AUTH_MNEMONIC_ACCOUNT_INDEX
                   CARTESI_BLOCKCHAIN_HTTP_ENDPOINT
                   CARTESI_BLOCKCHAIN_WS_ENDPOINT
                   CARTESI_POSTGRES_ENDPOINT
@@ -170,7 +172,8 @@ jobs:
                   --env CARTESI_CONTRACTS_HISTORY_ADDRESS=${{ secrets.CARTESI_CONTRACTS_HISTORY_ADDRESS }} \
                   --env CARTESI_CONTRACTS_INPUT_BOX_ADDRESS=${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_ADDRESS }} \
                   --env CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER=${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }} \
-                  --env CARTESI_AUTH_PRIVATE_KEY='${{ secrets.CARTESI_AUTH_PRIVATE_KEY }}' \
+                  --env CARTESI_AUTH_MNEMONIC='${{ secrets.CARTESI_AUTH_MNEMONIC }}' \
+                  --env CARTESI_AUTH_MNEMONIC_ACCOUNT_INDEX=${{ secrets.CARTESI_AUTH_MNEMONIC_ACCOUNT_INDEX }} \
                   --env CARTESI_POSTGRES_ENDPOINT=${{ secrets.CARTESI_POSTGRES_ENDPOINT }} \
                   ultimateurinater/bubblewars-sepolia:latest > ~/blockchain_nohup.out 2>&1 &
             # - name: Wait for Blockchain Setup
