--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -19,8 +19,8 @@ jobs:
           CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER: ${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }}
           CARTESI_EPOCH_DURATION: ${{ secrets.CARTESI_EPOCH_DURATION }}
           CARTESI_EPOCH_LENGTH: ${{ secrets.CARTESI_EPOCH_LENGTH }}
-          CARTESI_AUTH_MNEMONIC: ${{ secrets.CARTESI_AUTH_MNEMONIC }}
-          CARTESI_AUTH_MNEMONIC_ACCOUNT_INDEX: ${{ secrets.CARTESI_AUTH_MNEMONIC_ACCOUNT_INDEX }}
+          CARTESI_AUTH_PRIVATE_KEY: ${{ secrets.CARTESI_AUTH_PRIVATE_KEY }}
+          CARTESI_AUTH_KIND: ${{ secrets.CARTESI_AUTH_KIND }}
           CARTESI_BLOCKCHAIN_HTTP_ENDPOINT: ${{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}
           CARTESI_BLOCKCHAIN_WS_ENDPOINT: ${{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}
           CARTESI_POSTGRES_ENDPOINT: ${{ secrets.CARTESI_POSTGRES_ENDPOINT }}
@@ -48,8 +48,8 @@ jobs:
                   CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER
                   CARTESI_EPOCH_DURATION
                   CARTESI_EPOCH_LENGTH
-                  CARTESI_AUTH_MNEMONIC
-                  CARTESI_AUTH_MNEMONIC_ACCOUNT_INDEX
+                  CARTESI_AUTH_PRIVATE_KEY
+                  CARTESI_AUTH_KIND
                   CARTESI_BLOCKCHAIN_HTTP_ENDPOINT
                   CARTESI_BLOCKCHAIN_WS_ENDPOINT
                   CARTESI_POSTGRES_ENDPOINT
@@ -172,8 +172,8 @@ jobs:
                   --env CARTESI_CONTRACTS_HISTORY_ADDRESS=${{ secrets.CARTESI_CONTRACTS_HISTORY_ADDRESS }} \
                   --env CARTESI_CONTRACTS_INPUT_BOX_ADDRESS=${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_ADDRESS }} \
                   --env CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER=${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }} \
-                  --env CARTESI_AUTH_MNEMONIC='${{ secrets.CARTESI_AUTH_MNEMONIC }}' \
-                  --env CARTESI_AUTH_MNEMONIC_ACCOUNT_INDEX=${{ secrets.CARTESI_AUTH_MNEMONIC_ACCOUNT_INDEX }} \
+                  --env CARTESI_AUTH_PRIVATE_KEY='${{ secrets.CARTESI_AUTH_PRIVATE_KEY }}' \
+                  --env CARTESI_AUTH_KIND=${{ secrets.CARTESI_AUTH_KIND }} \
                   --env CARTESI_POSTGRES_ENDPOINT=${{ secrets.CARTESI_POSTGRES_ENDPOINT }} \
                   --env sm_deadline_advance_state=1000000000 \
                   --env SM_DEADLINE_ADVANCE_STATE=1000000000 \
